variables.RunFour.scala.error
Erreur de compilation :
RunFour:1: error: Missing closing brace `}' assumed here
var x = 0
^RunFour:1: error: Missing closing brace `}' assumed here
var x = 0
^RunFour:1: error: expected class or object definition
var x = 0
^RunFour:3: error: expected class or object definition
while ( x!=4 ) {
^