variables.RunFour.scala.code
var x = 0

while ( x!=4 ) {
  while ( !estSurBiscuit() ) {
  	avance()  
  prendBiscuit()
  x=x+1  